[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/font1.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/font1.tres" type="DynamicFont" id=2]
[ext_resource path="res://source/Menu.gd" type="Script" id=3]
[ext_resource path="res://assets/like.png" type="Texture" id=4]
[ext_resource path="res://source/Puzzle.tscn" type="PackedScene" id=5]
[ext_resource path="res://source/Splash.tscn" type="PackedScene" id=6]
[ext_resource path="res://source/button-normal.tres" type="StyleBox" id=7]

[sub_resource type="DynamicFont" id=1]
size = 48
extra_spacing_bottom = 26
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.513726, 0.615686, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.15
anchor_right = 0.5
anchor_bottom = 0.15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Top"]
margin_left = -240.0
margin_top = -105.0
margin_right = 240.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "Sporko's
 Favourite
  Puzzles!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecretReset" type="Button" parent="Top"]
modulate = Color( 0.0588235, 0.0352941, 0.0352941, 0 )
margin_top = -90.0
margin_right = 45.0
margin_bottom = -60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Middle" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.85
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Puzzles" type="Node2D" parent="Middle"]
position = Vector2( 0, -20 )

[node name="SixCoins" parent="Middle/Puzzles" instance=ExtResource( 5 )]
position = Vector2( 0, 50 )
puzzle_name = "SIX COINS"

[node name="TaxCity" parent="Middle/Puzzles" instance=ExtResource( 5 )]
position = Vector2( 0, 155 )
puzzle_name = "TAX CITY"

[node name="Princess" parent="Middle/Puzzles" instance=ExtResource( 5 )]
position = Vector2( 0, 260 )
puzzle_name = "PRINCESS"

[node name="Bottom" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.95
anchor_right = 0.5
anchor_bottom = 0.95
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rate" type="Button" parent="Bottom"]
margin_left = -150.0
margin_top = -32.0
margin_right = 150.0
margin_bottom = 20.0
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 7 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0.101961, 0.0352941, 0.0509804, 0.494118 )
custom_colors/font_color = Color( 0.101961, 0.0352941, 0.0509804, 1 )
custom_colors/font_color_hover = Color( 0.101961, 0.0352941, 0.0509804, 1 )
custom_colors/font_color_pressed = Color( 0.101961, 0.0352941, 0.0509804, 1 )
text = "rate this app?"
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Bottom"]
margin_left = -285.0
margin_top = -260.0
margin_right = 285.0
margin_bottom = -65.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.964706, 0.968627, 0.921569, 1 )
text = "Enjoy some of my favourite puzzles!

Sources available in each puzzle.

More to come!"
align = 1
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomRight" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="BottomRight"]
visible = false
margin_left = -100.0
margin_top = -40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "v0.3.1"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Splash" parent="." instance=ExtResource( 6 )]
visible = false
[connection signal="pressed" from="Top/SecretReset" to="." method="_on_SecretReset_pressed"]
[connection signal="pressed" from="Middle/Puzzles/SixCoins" to="." method="_on_SixCoins_pressed"]
[connection signal="pressed" from="Middle/Puzzles/TaxCity" to="." method="_on_TaxCity_pressed"]
[connection signal="pressed" from="Middle/Puzzles/Princess" to="." method="_on_Princess_pressed"]
[connection signal="pressed" from="Bottom/Rate" to="." method="_on_Rate_pressed"]
